[gd_scene load_steps=6 format=3 uid="uid://cjwd7ou4lhti3"]

[ext_resource type="Script" path="res://controls_screen/controls_screen.gd" id="1_y18n3"]
[ext_resource type="PackedScene" uid="uid://4hsrj6bxicge" path="res://player/Fog.tscn" id="2_4asr8"]
[ext_resource type="FontFile" uid="uid://bp2i0rh5q7uc0" path="res://assets/fonts/SymbolsNerdFont-Regular.ttf" id="2_we44o"]
[ext_resource type="FontFile" uid="uid://dgwapumtu5b3g" path="res://assets/fonts/Arapey-Regular.ttf" id="3_sno1l"]

[sub_resource type="Theme" id="Theme_vpf2r"]
Label/constants/outline_size = -1
Label/font_sizes/font_size = 32
Label/fonts/Icons = ExtResource("2_we44o")
Label/fonts/font = ExtResource("3_sno1l")

[node name="ControlsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y18n3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0823529, 0.176471, 1)

[node name="Fog" parent="." instance=ExtResource("2_4asr8")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_vpf2r")
theme_override_constants/separation = 100

[node name="ControlsColumns" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/Rows/ControlsColumns"]
layout_mode = 2

[node name="GoRight" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GoRight" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoRight"]
layout_mode = 2

[node name="RightArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoRight/GoRight"]
layout_mode = 2
text = "󰜵 "

[node name="D" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoRight/GoRight"]
layout_mode = 2
text = "󰬋 "

[node name="RightArrowAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoRight"]
layout_mode = 2
text = "Move to the right"

[node name="GoLeft" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GoLeftKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoLeft"]
layout_mode = 2

[node name="LeftArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoLeft/GoLeftKeys"]
layout_mode = 2
text = "󰜲 "

[node name="Q" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoLeft/GoLeftKeys"]
layout_mode = 2
text = "󰬘 "

[node name="Action" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/GoLeft"]
layout_mode = 2
text = "Move to the left"

[node name="Jump" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Keys2" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Jump"]
layout_mode = 2

[node name="Space" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Jump/Keys2"]
layout_mode = 2
text = "󱁐 "

[node name="O" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Jump/Keys2"]
layout_mode = 2
text = "󰬖 "

[node name="JumpAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Jump"]
layout_mode = 2
text = "Jump"

[node name="Dash" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DashKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash"]
layout_mode = 2

[node name="Shift" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash/DashKeys"]
layout_mode = 2
text = "󰘶 "

[node name="K" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash/DashKeys"]
layout_mode = 2
text = "󰬒 "

[node name="DashAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash"]
layout_mode = 2
text = "Dash"

[node name="Dash2" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DashKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash2"]
layout_mode = 2

[node name="Shift" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash2/DashKeys"]
layout_mode = 2
text = "Escape"

[node name="DashAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/LeftColumn/Dash2"]
layout_mode = 2
text = "Pause"

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/Rows/ControlsColumns"]
layout_mode = 2

[node name="LookUp" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LookUpKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookUp"]
layout_mode = 2

[node name="UpArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookUp/LookUpKeys"]
layout_mode = 2
text = "󰜸 "

[node name="Z" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookUp/LookUpKeys"]
layout_mode = 2
text = "󰬡 "

[node name="LookUpAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookUp"]
layout_mode = 2
text = "Up direction (dash)"

[node name="LookDown" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LookDownKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookDown"]
layout_mode = 2

[node name="DownArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookDown/LookDownKeys"]
layout_mode = 2
text = "󰛀 "

[node name="S" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookDown/LookDownKeys"]
layout_mode = 2
text = "󰬚 "

[node name="LookDownAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookDown"]
layout_mode = 2
text = "Down direction (dash)"

[node name="LookLeft" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LookLeftKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookLeft"]
layout_mode = 2

[node name="LeftArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookLeft/LookLeftKeys"]
layout_mode = 2
text = "󰜲 "

[node name="Q" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookLeft/LookLeftKeys"]
layout_mode = 2
text = "󰬘 "

[node name="LookLeftAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookLeft"]
layout_mode = 2
text = "Left direction (dash)"

[node name="LookRight" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LookRightKeys" type="HBoxContainer" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookRight"]
layout_mode = 2

[node name="RightArrow" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookRight/LookRightKeys"]
layout_mode = 2
text = "󰜵 "

[node name="D" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookRight/LookRightKeys"]
layout_mode = 2
text = "󰬋 "

[node name="LookRightAction" type="Label" parent="MarginContainer/Rows/ControlsColumns/RightColumn/LookRight"]
layout_mode = 2
text = "Right direction (dash)"

[node name="PressKey" type="Label" parent="MarginContainer/Rows"]
layout_mode = 2
text = "Press Return to start"
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="MinTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BeforeTextRatio" type="Timer" parent="."]
one_shot = true

[node name="Fading" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.87451, 0.972549, 1, 0)

[node name="FadingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MinTimer" to="." method="_on_min_timer_timeout"]
[connection signal="timeout" from="BeforeTextRatio" to="." method="_on_before_text_ratio_timeout"]
[connection signal="timeout" from="FadingTimer" to="." method="_on_fading_timer_timeout"]
